--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,7 +1,7 @@
 {
-  "robotWidth": 0.1,
-  "robotLength": 0.1,
-  "holonomicMode": true,
+  "robotWidth": 0.6,
+  "robotLength": 0.6,
+  "holonomicMode": false,
   "generateJSON": false,
   "generateCSV": false
 }
