--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,7 +1,7 @@
 {
   "robotWidth": 0.6,
   "robotLength": 0.6,
-  "holonomicMode": false,
+  "holonomicMode": true,
   "generateJSON": false,
   "generateCSV": false
 }
